# finally

./: .gitignore  LICENSE  README.md  docker-compose.yml
agent-service/: .python-version  Dockerfile  README.md  prompt.yaml  pyproject.toml  requirements.txt  streaming_retriever_example.py
agent-service/data/: 7.txt  9.txt
agent-service/src/: __init__.py  config.py  logging_config.py  main.py
agent-service/src/api/: document_utils.py  graph.py  models.py  router.py  schema.py  utils.py
agent-service/src/auth/: jwt_utils.py  router.py  user_service.py
agent-service/src/graph/: router.py
indexer/: .gitignore  Dockerfile  batch_progress.json  bulk_sync_limited.py  bulk_sync_with_checkpoints.py  check_data.py  check_file_table.py  check_payload.py  check_product_schema.py  check_qdrant_payload.py  check_schema.py  create_test_data.py  find_brand.py  fix_payloads.py  pyproject.toml  reset_postgres.py  simple_redis_test.py  simple_test.py  test_embedding_service.py  test_error_handler.py  test_failure_mechanism.py  test_job_processor.py  test_rate_limiting.py  test_redis_connection.py  test_redis_queue.py  worker_daemon.py
indexer/.cursor/: mcp.json
indexer/.taskmaster/: state.json
indexer/.taskmaster/docs/: prd.txt
indexer/.taskmaster/tasks/: tasks.json
indexer/data/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt
indexer/docs/: future_improvement_plan.md  scraper-team-job-formats.md
indexer/migrations/: create_failed_operations_table.sql
indexer/scripts/: run_batch_indexing.py
indexer/scripts/benchmarks/: benchmark_batch_sizes.py  performance_load_test.py  (+1 more)
indexer/src/: config.py  main.py
indexer/tests/: test_batch_processor.py  test_data_selection.py  test_database_integration.py  test_embedding_service_mock.py  test_integrated_error_handling.py  test_job_poller.py  test_job_processor.py  test_metrics_integration.py  test_optimized_redis_pool.py  test_performance_benchmarks.py  test_preprocessor.py  test_redis_pool_optimization.py  test_safe_batch.py  test_small_batch.py
scraper/: .env copy  .evn.sample  Dockerfile  cron  docker-compose.yml  example-scheduler.py  finally.ddl  list.txt  main.py  pyproject.toml  supervisord.conf
scraper/core/: database.py  logger.py
scraper/models/: __init__.py  category.py  code.py  product.py  provider.py
scraper/providers/: bunjang.py
scraper/routers/: sync.py
scraper/schemas/: category.py
scraper/utils/: string.py  time.py
(+97 files in other folders)
