[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langgraph>=0.4.1",
    "langsmith>=0.3.39",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
]
